--- a/consolidation_project/appendix_A_biquaternion_gravity_consolidated.tex
+++ b/consolidation_project/appendix_A_biquaternion_gravity_consolidated.tex
@@ -3,13 +3,13 @@
 
 This appendix presents the gravitational sector of the Unified Biquaternion Theory (UBT).
 It combines the core theoretical framework from the original Biquaternion Gravity appendix
-with the detailed derivations from the Quantum Gravity solution files, reformulated for
+with the detailed analysis from the Quantum Gravity solution files, reformulated for
 clarity and coherence.
 
 \subsection{Introduction}
 
 The gravitational field in UBT emerges naturally from the covariant formulation of the
-biquaternionic tensor-spinor field equations. The metric tensor is derived from the real
+biquaternionic tensor-spinor field equations. The metric tensor is propose from the real
 part of the scalar product in the biquaternion space, ensuring compatibility with the
 principles of General Relativity while extending them to the complexified algebraic
 structure.
@@ -35,7 +35,7 @@ The Einstein tensor in this framework takes the standard form:
 \begin{equation}
   G_{\mu\nu} = R_{\mu\nu} - \frac{1}{2} g_{\mu\nu} R ,
 \end{equation}
-but with curvature tensors $R_{\mu\nu}$ and $R$ derived from the biquaternionic connection
+but with curvature tensors $R_{\mu\nu}$ and $R$ propose from the biquaternionic connection
 coefficients $\Gamma^\rho_{\mu\nu}$ obtained from the extended algebra.
 
 The gravitational field equations couple $G_{\mu\nu}$ to the stress-energy tensor
@@ -44,10 +44,10 @@ $T_{\mu\nu}$ constructed from the biquaternion field invariants:
   G_{\mu\nu} = 8\pi G \, T_{\mu\nu}[\Theta] .
 \end{equation}
 
-\subsection{Derivation Summary}
+\subsection{analysis Summary}
 
-The original derivation proceeds by first defining the biquaternionic connection
-compatible with the metric derived from $\Theta(q,\tau)$. The connection coefficients
+The original analysis proceeds by first defining the biquaternionic connection
+compatible with the metric propose from $\Theta(q,\tau)$. The connection coefficients
 are computed as:
 \begin{equation}
   \Gamma^\rho_{\mu\nu} =
@@ -80,5 +80,5 @@ Biquaternion Gravity provides a natural embedding of General Relativity into a
 complexified algebraic framework, unifying gravity with other interactions at the
 geometric level. The connection to Quantum Gravity arises from treating $\Theta$ as a
 quantum field, where gravitational effects emerge from its covariant structure. This
-approach predicts possible deviations from classical GR at very small scales, while
+approach suggest possible deviations from classical GR at very small scales, while
 reducing to Einstein's equations in the macroscopic limit.
