--- a/consolidation_project/appendix_C_electromagnetism_gauge_consolidated.tex
+++ b/consolidation_project/appendix_C_electromagnetism_gauge_consolidated.tex
@@ -2,7 +2,7 @@
 \appendix{C}{Electromagnetism in the Unified Biquaternion Framework}
 
 \section{Overview}
-This appendix consolidates the original derivations, solutions, and conceptual notes on electromagnetism within the Unified Biquaternion Theory (UBT). The aim is to present a coherent, non-duplicative treatment, while preserving the original reasoning paths that led to the key results. Links to related appendices on gravitational coupling, $\alpha$-phase effects, and $p$-adic extensions are provided where relevant.
+This appendix consolidates the original analysis, solutions, and conceptual notes on electromagnetism within the Unified Biquaternion Theory (UBT). The aim is to present a coherent, non-duplicative treatment, while preserving the original reasoning paths that led to the key results. Links to related appendices on gravitational coupling, $\alpha$-phase effects, and $p$-adic extensions are provided where relevant.
 
 \section{Biquaternion Formulation of Electromagnetism}
 We start from the covariant field equation for the electromagnetic potential $A_\mu$ embedded into the biquaternion algebra $\mathbb{B}$. This allows the electric and magnetic fields to be represented as bivector components of a unified field tensor $\mathcal{F}$,
@@ -16,14 +16,14 @@ In explicit biquaternion form:
 where $\boldsymbol{\sigma}$ are the Pauli-like basis elements in $\mathbb{B}$ and $i$ is the scalar imaginary unit commuting with the quaternion units.
 
 \section{Maxwell's Equations in Curved Spacetime}
-Using the covariant derivative $\nabla_\mu$ compatible with the UBT metric $g_{\mu\nu}$ derived in Appendix B (Gravitation), Maxwell's equations generalize to:
+Using the covariant derivative $\nabla_\mu$ compatible with the UBT metric $g_{\mu\nu}$ propose in Appendix B (Gravitation), Maxwell's equations generalize to:
 \begin{align}
     \nabla_\mu \mathcal{F}^{\mu\nu} &= \mu_0 J^\nu, \\
     \nabla_{[\alpha} \mathcal{F}_{\beta\gamma]} &= 0.
 \end{align}
 This retains gauge invariance and introduces curvature coupling terms, which in the biquaternion formalism appear as commutator terms $[\Gamma, \mathcal{F}]$ in the connection representation.
 
-\section{Original Derivation Notes}
+\section{Original analysis Notes}
 In the early stages of this work, the electromagnetic sector was explored via analogy with the Dirac equation in $\mathbb{B}$. The key insight was that the EM field could be treated as the curvature of a $U(1)$ connection embedded in the right-multiplication sector of $\mathbb{B}$, while the left-multiplication sector described spinorial matter. This decomposition naturally explains charge conjugation symmetry and provides a pathway for coupling to the $\alpha$-phase field (see Appendix F).
 
 It was also noted that the Fokker--Planck-type diffusion of the $\psi$-phase in complex time $\tau = t + i\psi$ could modulate the effective permittivity and permeability of the vacuum. This idea connects to the $p$-adic hierarchical scaling of field strengths (Appendix G).
@@ -49,7 +49,7 @@ In $\mathbb{B}$ representation, duality rotations correspond to multiplication b
 
 \section{Links to Other Appendices}
 \begin{itemize}
-    \item \textbf{Appendix B}: Gravitational coupling and metric derivations.
+    \item \textbf{Appendix B}: Gravitational coupling and metric analysis.
     \item \textbf{Appendix F}: $\alpha$-phase modulation of EM fields.
     \item \textbf{Appendix G}: $p$-adic scaling and hierarchical structure of field amplitudes.
     \item \textbf{Appendix H}: Toroidal resonator applications and standing wave quantization.
