--- a/consolidation_project/appendix_D_qed_consolidated.tex
+++ b/consolidation_project/appendix_D_qed_consolidated.tex
@@ -164,7 +164,7 @@ Renormalization & Preserved in QED limit & $\psi$-terms renormalize to zero \\
 \end{center}
 
 \subsection*{Concluding Remarks}
-QED is fully recovered as the $\psi=\mathrm{const}$ limit of the UBT electromagnetic sector. The UBT extension provides a controlled way to explore small, phase-mediated deviations without spoiling the extraordinary agreement of QED with experiment. Dedicated resonator setups and precision spectroscopy are the natural arenas to test the predicted effects.
+QED is fully recovered as the $\psi=\mathrm{const}$ limit of the UBT electromagnetic sector. The UBT extension provides a controlled way to explore small, phase-mediated deviations without spoiling the extraordinary agreement of QED with experiment. Dedicated resonator setups and precision spectroscopy are the natural arenas to test the suggest effects.
 
 \section{UBT Extension of QED}
 
