--- a/consolidation_project/appendix_E_SM_QCD_embedding.tex
+++ b/consolidation_project/appendix_E_SM_QCD_embedding.tex
@@ -1,3 +1,4 @@
+% NOTE: α is treated as empirical in CORE; see appendix_alpha_statement.
 
 \section{Appendix E: Standard Model Coupling and QCD Embedding in UBT}
 \label{app:sm-qcd-ubt}
@@ -41,7 +42,7 @@ The electric charge operator obeys $Q = T^3 + Y/2$, and the electroweak mixing i
 \qquad
 e \;=\; g \sin\theta_W \;=\; g^\prime \cos\theta_W.
 \end{equation}
-At low energies $e$ matches $\alpha$ derived in Appendix~\ref{app:alpha-consolidated}. The determination of $\theta_W$ and $(g,g^\prime)$
+At low energies $e$ matches $\alpha$ propose in Appendix~\ref{app:alpha-consolidated}. The determination of $\theta_W$ and $(g,g^\prime)$
 requires additional matching conditions (left for future work) or a unification hypothesis.
 
 \subsection{Gauge-invariant Lagrangian}
