--- a/consolidation_project/appendix_F_psychons_theta.tex
+++ b/consolidation_project/appendix_F_psychons_theta.tex
@@ -1,3 +1,6 @@
+%% ================================================
+%% SPECULATIVE / WIP — Not part of CORE claims.
+%% ================================================
 \appendix
 \section*{Appendix F: Psychons and the Theta Field}
 \addcontentsline{toc}{section}{Appendix F: Psychons and the Theta Field}
