--- a/consolidation_project/appendix_O_padic_overview.tex
+++ b/consolidation_project/appendix_O_padic_overview.tex
@@ -1,3 +1,6 @@
+%% ================================================
+%% SPECULATIVE / WIP — Not part of CORE claims.
+%% ================================================
 \section{Appendix O: p-adic and Adelic Overview (UBT Summary)}
 \label{app:padic-overview}
 This appendix summarizes the p-adic/adelic framework used across UBT 2.0, with references to detailed derivations in Appendix~\ref{app:alpha-consolidated} and the dark-matter application in Appendix~\ref{app:dm-consolidated}.
