--- a/consolidation_project/appendix_V_visual_maps.tex
+++ b/consolidation_project/appendix_V_visual_maps.tex
@@ -1,3 +1,6 @@
+%% ================================================
+%% SPECULATIVE / WIP — Not part of CORE claims.
+%% ================================================
 \section{Appendix J: Visual Maps of UBT 2.0}
 \label{app:visual-maps}
 
