--- a/consolidation_project/appendix_I_new_fields_and_particles.tex
+++ b/consolidation_project/appendix_I_new_fields_and_particles.tex
@@ -1,3 +1,6 @@
+%% ================================================
+%% SPECULATIVE / WIP — Not part of CORE claims.
+%% ================================================
 
 \appendix
 \section*{Appendix I: Hopfions and Topological Field Configurations in the Unified Biquaternion Theory}
