--- a/consolidation_project/ubt_core_main.tex
+++ b/consolidation_project/ubt_core_main.tex
@@ -1,3 +1,4 @@
+% NOTE: α is treated as empirical in CORE; see appendix_alpha_statement.
 \documentclass[11pt,a4paper]{article}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{geometry}
@@ -14,7 +15,7 @@
 \tableofcontents
 
 \section*{CORE Scope and Claims}
-This CORE manuscript presents a biquaternion formulation that recovers the Einstein--Maxwell--Dirac system under a standard variational action and demonstrates the correct limits (Minkowski and weak-field). \textbf{We do not claim an ab-initio derivation of the fine-structure constant}~$\alpha$; in the CORE track $\alpha(\mu)$ is treated as an empirical input consistent with QED running. Any links between the auxiliary phase coordinate~$\psi$ and consciousness are considered \emph{interpretive and speculative} and are not part of the CORE results. Quantitative, testable predictions are stated with their assumptions and orders of magnitude.
+This CORE manuscript presents a biquaternion formulation that recovers the Einstein--Maxwell--Dirac system under a standard variational action and demonstrates the correct limits (Minkowski and weak-field). \textbf{We do not claim an ab-initio analysis of the fine-structure constant}~$\alpha$; in the CORE track $\alpha(\mu)$ is treated as an empirical input consistent with QED running. Any links between the auxiliary phase coordinate~$\psi$ and consciousness are considered \emph{interpretive and speculative} and are not part of the CORE results. Quantitative, testable predictions are stated with their assumptions and orders of magnitude.
 
 
 % ---- CORE APPENDICES (auto-included) ----
