--- a/consolidation_project/ubt_core_main.tex
+++ b/consolidation_project/ubt_core_main.tex
@@ -4,6 +4,7 @@
 \usepackage{geometry}
 \usepackage{graphicx}
 \usepackage{hyperref}
+\usepackage{slashed}
 \geometry{margin=1in}
 
 \title{Unified Biquaternion Theory (Consolidation) --- CORE Manuscript}
