--- a/consolidation_project/appendix_H_alpha_padic_combined.tex
+++ b/consolidation_project/appendix_H_alpha_padic_combined.tex
@@ -4,7 +4,9 @@
 % Combined Appendix: Alpha Constants and p-adic Extension
 % This file merges appendix_H_alpha_and_constants.tex and appendix_P_prime_alpha.tex
 
-\section*{Appendix H: Fine-Structure Constant, Topological Derivations, and p-adic Extension}
+\section{Appendix H: Fine-Structure Constant, Topological Derivations, and p-adic Extension}
+\label{app:alpha-consolidated}
+
 
 This appendix consolidates the Notes on modelling the fine-structure constant from topological and geometric considerations with its extension into the p-adic domain.
 
@@ -14,7 +16,7 @@ This appendix consolidates the Notes on modelling the fine-structure constant fr
 
 
 \appendix
-\section*{Appendix H: Fine-Structure Constant $\alpha$ and Fundamental Constants in the UBT Framework}
+\section{Appendix H: Fine-Structure Constant $\alpha$ and Fundamental Constants in the UBT Framework}
 \addcontentsline{toc}{section}{Appendix H: Fine-Structure Constant $\alpha$ and Fundamental Constants in the UBT Framework}
 
 \subsection*{H.1 Motivation and Scope}
