--- a/consolidation_project/appendix_F_psychons_theta.tex
+++ b/consolidation_project/appendix_F_psychons_theta.tex
@@ -2,9 +2,8 @@
 %% SPECULATIVE / WIP — Not part of CORE claims.
 %% ================================================
 \appendix
-\section*{Appendix F: Psychons and the Theta Field}
-\addcontentsline{toc}{section}{Appendix F: Psychons and the Theta Field}
-
+\section{Appendix F: Psychons and the Theta Field}
+% removed addcontentsline
 \subsection*{F.1 Scope and Context}
 This appendix consolidates the theoretical foundation of \emph{psychons}---elementary excitations of the phase coordinate $\psi$ in complex time $\tau=t+i\psi$---and their coupling to the biquaternionic master field $\Theta(q,\tau)$. It merges and streamlines results from prior notes on psychons, the $\psi$-resonator concept, and the consciousness-model solutions (stationary analysis, time dynamics, and a decision-making toy model).
 
