--- a/consolidation_project/appendix_G_dark_matter_unified_padic.tex
+++ b/consolidation_project/appendix_G_dark_matter_unified_padic.tex
@@ -212,7 +212,7 @@ Possible observational consequences include:
 The UBT hopfion model provides a purely topological candidate for dark matter, naturally arising from the field \(\Theta(q,\tau)\) without introducing ad hoc particles. This aligns with the theory’s aim to unify physical phenomena through a single geometric–algebraic framework.
 
 \section{Appendix G: Dark Matter, Hopfions, and Topological Excitations in the $\Theta$-Field}
-\addcontentsline{toc}{section}{Appendix G: Dark Matter, Hopfions, and Topological Excitations in the $\Theta$-Field}
+% removed addcontentsline
 \subsection*{G.1 Motivation}
 Within the Unified Biquaternion Theory (UBT), the master field $\Theta(q,\tau)$ allows for nontrivial topological configurations. 
 A particularly relevant class are \emph{Hopfions}---localized, finite-energy field configurations characterized by a nonzero Hopf invariant. 
@@ -333,8 +333,7 @@ These values serve only as a \emph{scaling} guide; in physical units, $\alpha,\b
 
 \appendix
 \section{Appendix G: Dark Matter, Hopfions, and Topological Excitations in the $\Theta$-Field}
-\addcontentsline{toc}{section}{Appendix G: Dark Matter, Hopfions, and Topological Excitations in the $\Theta$-Field}
-
+% removed addcontentsline
 \subsection*{G.1 Motivation}
 Within the Unified Biquaternion Theory (UBT), the master field $\Theta(q,\tau)$ allows for nontrivial topological configurations. 
 A particularly relevant class are \emph{Hopfions}---localized, finite-energy field configurations characterized by a nonzero Hopf invariant. 
