--- a/consolidation_project/appendix_H_alpha_padic_combined.tex
+++ b/consolidation_project/appendix_H_alpha_padic_combined.tex
@@ -17,8 +17,7 @@ This appendix consolidates the Notes on modelling the fine-structure constant fr
 
 \appendix
 \section{Appendix H: Fine-Structure Constant $\alpha$ and Fundamental Constants in the UBT Framework}
-\addcontentsline{toc}{section}{Appendix H: Fine-Structure Constant $\alpha$ and Fundamental Constants in the UBT Framework}
-
+% removed addcontentsline
 \subsection*{H.1 Motivation and Scope}
 This appendix consolidates the derivations and consistency relations for the fine-structure constant $\alpha$ and selected fundamental constants within the Unified Biquaternion Theory (UBT). 
 We integrate (i) standard QED renormalization of $\alpha(Q^2)$, (ii) a geometric--modular ansatz based on Jacobi theta functions (see Appendix~E), and (iii) the complex-time and biquaternionic extensions introduced in Appendices~A--D.
@@ -142,7 +141,7 @@ Informally, one might say that \emph{theta} acts as a guiding principle: the mod
 
 
 \appendix
-\section*{Appendix P: Prime-Based Universes, Fine-Structure Constant, and $p$-Adic Extension}
+\section{Appendix P: Prime-Based Universes, Fine-Structure Constant, and $p$-Adic Extension}
 
 In Appendix F we introduced the $p$-adic formulation of the Unified Biquaternion Theory (UBT), in which the complex-time manifold $\mathbb{C}^5$ admits an alternative valuation defined over the field $\mathbb{Q}_p$ for a prime $p$. Here, we explore a specific physical implication of this structure: the possibility that the fine-structure constant $\alpha$ is determined by a prime number parameter governing the topological winding of the fundamental field $\Theta(q,\tau)$.
 
