--- a/consolidation_project/appendix_I_new_fields_and_particles.tex
+++ b/consolidation_project/appendix_I_new_fields_and_particles.tex
@@ -3,7 +3,7 @@
 %% ================================================
 
 \appendix
-\section*{Appendix I: Hopfions and Topological Field Configurations in the Unified Biquaternion Theory}
+\section{Appendix I: Hopfions and Topological Field Configurations in the Unified Biquaternion Theory}
 
 
 % === UBT-Theoretical Derivation (placed at the start) ===
@@ -49,8 +49,7 @@ Stationarity gives $E_{\min}=2\sqrt{\alpha\beta\,I_2 I_4}$; geometric inequaliti
 Canonical quantization around a classical hopfion $n_0$ yields fluctuation modes from the Hessian of $E[n]$, while the integer $Q_H$ plays the role of a superselection label.
 Slow $\psi$-dynamics ($\partial_\psi\neq 0$) adds a kinetic term $\frac12\kappa_\psi(\partial_\psi n)^2$ to the Lagrangian, shifting frequencies but preserving the topological bound.
 
-\addcontentsline{toc}{section}{Appendix I: Hopfions and Topological Field Configurations in the Unified Biquaternion Theory}
-
+% removed addcontentsline
 \subsection*{I.1 Introduction}
 In the Unified Biquaternion Theory (UBT), \emph{hopfions} are finite-energy knotted field configurations characterized by a nontrivial Hopf invariant $Q_H\in\mathbb{Z}$. 
 They emerge as topological solitons within the master field $\Theta(q,\tau)$, where $\tau=t+i\psi$. 
