--- a/consolidation_project/appendix_K_maxwell_curved_space.tex
+++ b/consolidation_project/appendix_K_maxwell_curved_space.tex
@@ -1,6 +1,6 @@
 
 \appendix
-\section*{Appendix K: Maxwell Fields in Curved Spacetime (Bessel and Hankel Solutions)}
+\section{Appendix K: Maxwell Fields in Curved Spacetime (Bessel and Hankel Solutions)}
 
 \subsection*{K.1 UBT Motivation and Setting}
 In the Unified Biquaternion Theory (UBT), the master field $\Theta(q,\tau)$ lives on a complexified spacetime with $\tau=t+i\psi$.
