--- a/consolidation_project/appendix_W_bibliography.tex
+++ b/consolidation_project/appendix_W_bibliography.tex
@@ -1,4 +1,4 @@
-\section*{Appendix P: Bibliography}
-\addcontentsline{toc}{section}{Appendix P: Bibliography}
+\section{Appendix P: Bibliography}
+% removed addcontentsline
 \bibliographystyle{unsrt}
 \bibliography{references}
