--- a/consolidation_project/appendix_D_qed_consolidated.tex
+++ b/consolidation_project/appendix_D_qed_consolidated.tex
@@ -1,7 +1,6 @@
 \appendix
-\section*{Appendix D: Quantum Electrodynamics (QED) in the Unified Biquaternion Theory}
-\addcontentsline{toc}{section}{Appendix D: Quantum Electrodynamics (QED) in the Unified Biquaternion Theory}
-
+\section{Appendix D: Quantum Electrodynamics (QED) in the Unified Biquaternion Theory}
+% removed addcontentsline
 \subsection*{1. Historical Overview and Core Principles}
 Quantum Electrodynamics (QED) is the relativistic quantum field theory of the electromagnetic interaction between charged fermions and photons. Built on local $U(1)$ gauge invariance and Lorentz symmetry, QED achieves the most precise agreement between theory and experiment in modern physics (e.g., electron $g-2$, Lamb shift). QED emerged from combining Maxwell's classical electrodynamics with the quantum mechanics of spin-$\tfrac{1}{2}$ particles (Dirac), and the renormalization program (Feynman, Schwinger, Tomonaga, Dyson).
 
