--- a/consolidation_project/ubt_core_main.tex
+++ b/consolidation_project/ubt_core_main.tex
@@ -9,6 +9,15 @@
 \author{UBT Team}
 \date{\today}
 
+\usepackage{slashed}
+\usepackage{xcolor}
+\usepackage{tikz}
+\usetikzlibrary{arrows.meta,calc,decorations.markings,positioning}
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
+\makeatletter
+\renewcommand{\theHsection}{\thesection.\arabic{section}}
+\makeatother
 \begin{document}
 \maketitle
 
