UBT: include G/H/O appendices and add labels

--- a/consolidation_project/appendix_H_alpha_padic_combined.tex
+++ b/consolidation_project/appendix_H_alpha_padic_combined.tex
@@ -17,7 +17,8 @@ This appendix consolidates the Notes on modelling the fine-structure constant fr
 
 \appendix
 \section{Appendix H: Fine-Structure Constant $\alpha$ and Fundamental Constants in the UBT Framework}
-% removed addcontentsline
+\addcontentsline{toc}{section}{Appendix H: Fine-Structure Constant $\alpha$ and Fundamental Constants in the UBT Framework}
+
 \subsection*{H.1 Motivation and Scope}
 This appendix consolidates the derivations and consistency relations for the fine-structure constant $\alpha$ and selected fundamental constants within the Unified Biquaternion Theory (UBT). 
 We integrate (i) standard QED renormalization of $\alpha(Q^2)$, (ii) a geometric--modular ansatz based on Jacobi theta functions (see Appendix~E), and (iii) the complex-time and biquaternionic extensions introduced in Appendices~A--D.
