--- a/consolidation_project/ubt_core_main.tex
+++ b/consolidation_project/ubt_core_main.tex
@@ -9,15 +9,6 @@
 \author{UBT Team}
 \date{\today}
 
-\usepackage{xcolor}
-\usepackage{tikz}
-\usetikzlibrary{arrows.meta,calc,decorations.markings,positioning}
-\usepackage{pgfplots}
-\pgfplotsset{compat=1.18}
-\IfFileExists{slashed.sty}{\usepackage{slashed}}{\newcommand{\slashed}[1]{\not\!#1}}
-\makeatletter
-\renewcommand{\theHsection}{\thesection.\arabic{section}}
-\makeatother
 \begin{document}
 \maketitle
 
@@ -36,6 +27,9 @@ This CORE manuscript presents a biquaternion formulation that recovers the Einst
 \input{appendix_D_qed_consolidated}
 \input{appendix_E_SM_QCD_embedding}
 \input{appendix_K_maxwell_curved_space}
+\input{appendix_G_dark_matter_consolidated}
+\input{appendix_H_alpha_padic_combined}
+\input{appendix_O_padic_overview}
 \input{appendix_W_bibliography}
 
 \input{appendix_alpha_statement}
