--- a/consolidation_project/ubt_core_main.tex
+++ b/consolidation_project/ubt_core_main.tex
@@ -1,4 +1,5 @@
 \documentclass[11pt,a4paper]{article}
+\usepackage{slashed}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{geometry}
 \usepackage{graphicx}
@@ -27,9 +28,6 @@ This CORE manuscript presents a biquaternion formulation that recovers the Einst
 \input{appendix_D_qed_consolidated}
 \input{appendix_E_SM_QCD_embedding}
 \input{appendix_K_maxwell_curved_space}
-\input{appendix_G_dark_matter_consolidated}
-\input{appendix_H_alpha_padic_combined}
-\input{appendix_O_padic_overview}
 \input{appendix_W_bibliography}
 
 \input{appendix_alpha_statement}
