preamble: add TikZ+PGFPlots+xcolor (fix tikzpicture)

--- a/consolidation_project/ubt_core_main.tex
+++ b/consolidation_project/ubt_core_main.tex
@@ -4,6 +4,11 @@
 \usepackage{geometry}
 \usepackage{graphicx}
 \usepackage{hyperref}
+\usepackage{xcolor}
+\usepackage{tikz}
+\usetikzlibrary{calc,decorations.pathmorphing,decorations.markings,positioning,arrows.meta,plotmarks}
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
 \geometry{margin=1in}
 
 \title{Unified Biquaternion Theory (Consolidation) --- CORE Manuscript}
