fix appendix G compilation

--- a/consolidation_project/appendix_G_dark_matter_unified_padic.tex
+++ b/consolidation_project/appendix_G_dark_matter_unified_padic.tex
@@ -1,4 +1,31 @@
-================================================================================\appendix{G}{Dark Matter as Topological Excitations in $\Theta(q,\tau)$ Field}
+\documentclass[12pt,a4paper]{article}
+
+% --- Encoding and fonts ---
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
+
+% --- Language ---
+\usepackage[english]{babel}
+
+% --- Math packages ---
+\usepackage{amsmath,amssymb,amsfonts}
+\usepackage{mathtools}
+\usepackage{physics}      % remove if not used
+\usepackage{siunitx}      % remove if not used
+
+% --- Page layout and links ---
+\usepackage{geometry}
+\geometry{margin=2.5cm}
+\usepackage{hyperref}
+\usepackage{microtype}
+
+\title{Appendix G: Dark Matter as Topological Excitations\\in the Unified $p$-Adic Vacuum}
+\author{}
+\date{\today}
+
+\begin{document}
+\maketitle
 
 \section{Introduction}
 In the Unified Biquaternion Theory (UBT), dark matter (DM) emerges naturally as a set of topologically protected excitations in the fundamental $\Theta(q,\tau)$ field, where $q$ are the biquaternionic coordinates and $\tau = t + i\psi$ is the complex time. The theory identifies these excitations with \emph{hopfions}, knotted field configurations classified by the Hopf index $Q_H \in \mathbb{Z}$, which are stable due to topological constraints.
@@ -665,3 +692,5 @@ Ladění toroidálního rezonátoru na konkrétní p-adický mód by vyžadovalo
 odpovídající $p$-adické periodicity, což otevírá možnost selektivní detekce konkrétních
 temných sektorů. To by mohlo vést k rozlišení různých p-adických složek temné hmoty
 a testování hypotézy multivesmíru s p-adickou strukturou.
+
+\end{document}
