--- a/consolidation_project/ubt_2_main.tex
+++ b/consolidation_project/ubt_2_main.tex
@@ -31,6 +31,6 @@ This CORE manuscript presents a biquaternion formulation that recovers the Einst
 
 % ---- BIBLIOGRAPHY ----
 \input{appendix_S_speculative_notes}
-\input{appendix_W_bibliography}
+\input{appendix_Z_bibliography}
 
 \end{document}
