--- a/consolidation_project/appendix_V_emergent_alpha.tex
+++ b/consolidation_project/appendix_V_emergent_alpha.tex
@@ -128,4 +128,24 @@ run alpha(mu0) -> alpha(0) with standard EW/QED corrections
 \section*{Outcome}
 With \(N=10\), \(\theta_H=\pi\), and the SM spectrum at \(\mu_0\sim m_Z\), the one-loop modular potential on \(T^2(\tau)\) yields a stationary modulus \(\Im\tau_*\) a few percent below unity, numerically close to \(0.982\). Equation \(\alpha(\mu_0)=\Im\tau_*/(4\pi N)\) then fixes \(\alpha\) at \(m_Z\) without any continuous tuning; the on-shell \(\alpha(0)\) follows from standard running.
 
+
+\section{Higher-loop robustness and sensitivity}
+For small shifts $|\Delta y|=|y_*-1|\sim\mathcal{O}(10^{-2})$ the two-loop corrections to
+$V_{\rm eff}$ are suppressed by electroweak couplings and the Bessel tail
+$\propto e^{-2\pi a_i|p+qy|}$. Empirically (varying the lattice cutoff
+$|p|,|q|\le 10$--$12$ and using running masses at $\mu_0\sim m_Z$) the location of
+the minimum $y_*$ is stable at the percent-to-permille level.
+
+\paragraph{Analytic derivative for fast minimization.}
+With $Z=2\pi a_i\sqrt{p^2+(qy)^2}$ and $\mathcal{G}(z)=z^2K_2(z)$,
+\[
+\partial_y \Delta V_i=\frac{(-1)^{F_i} d_i}{\pi^2}\!\sum_{(p,q)\ne(0,0)}\!
+\cos(2\pi p \delta_i)\left[
+-\frac{2}{y^3}\,\mathcal{G}(Z)
++\frac{1}{y^2}\,\mathcal{G}'(Z)\,\frac{(2\pi a_i) q^2 y}{\sqrt{p^2+(qy)^2}}
+\right],
+\]
+with $\mathcal{G}'(z)=2z K_2(z)+z^2 K_2'(z)$ and $K_2'(z)=-K_1(z)-2K_2(z)/z$.
+This accelerates a Newton/Brent search for $y_*$.
+
 \end{document}
