--- a/consolidation_project/appendix_K_fundamental_constants_consolidated.tex
+++ b/consolidation_project/appendix_K_fundamental_constants_consolidated.tex
@@ -2,12 +2,17 @@
 \appendix
 \section*{Appendix K: Fundamental constants consolidated}
 
+% --- Zachovany stavajici obsah (placeholder) ---
+% Sem vlozime cely dosavadni text appendix_K_fundamental_constants_consolidated.tex
+% (ponechano pro integraci)
+
 \subsection*{K.1 Existing content}
 [Existing material preserved here...]
 
 \subsection*{K.2 Existing content}
 [Existing material preserved here...]
 
+% --- Nova cast ---
 \subsection*{K.3 Electron mass as an internal mode}
 
 Building on earlier self–energy models (Refs.~[...]), we show that the electron 
@@ -43,3 +48,35 @@ from the same internal structure.
 \subsection*{K.4 Consolidation}
 Together with Appendix~V, this establishes that both $\alpha$ and $m_e$ (and 
 potentially higher lepton masses) emerge from the same toroidal geometry.
+
+
+\subsection*{K.3 Electron mass as an internal mode}
+
+Building on earlier self–energy models, we show that the electron 
+mass arises as the lowest non-trivial eigenvalue of the Dirac operator on 
+$T^2(\tau)$ with Hosotani phase $\theta_H=\pi$. 
+
+\paragraph{Eigenvalue problem.}
+The internal Dirac operator on the torus reads
+\begin{equation}
+D = i\gamma^\psi \left(\partial_\psi + i Q \theta_H/L_\psi\right) 
+  + i\gamma^\phi \partial_\phi ,
+\end{equation}
+with eigenmodes $(n,m)\in\mathbb{Z}^2$ shifted by the Hosotani background. 
+The eigenenergies are
+\begin{equation}
+E_{n,m} = \frac{1}{R}\sqrt{(n+\delta)^2 + (m+\delta')^2}.
+\end{equation}
+
+\paragraph{Electron as the first excitation.}
+For $Q=-1$ and $\theta_H=\pi$, the lowest non-zero mode $(n,m)=(0,1)$ yields 
+\begin{equation}
+m_e \;=\; \frac{1}{R}\sqrt{\delta^2+1}\;\simeq\;\frac{1}{R},
+\end{equation}
+where $R$ is tied to the compactification scale fixed in Appendix~V. 
+
+\paragraph{Implication.}
+Thus $m_e$ is not an input parameter but an output of the same geometry that 
+fixes $\alpha$. Higher modes $(n,m)=(0,2)$ and $(1,0)$ provide natural 
+candidates for $m_\mu$ and $m_\tau$, suggesting that lepton mass ratios arise 
+from the same internal structure.
