--- a/consolidation_project/appendix_V_emergent_alpha.tex
+++ b/consolidation_project/appendix_V_emergent_alpha.tex
@@ -2,8 +2,20 @@
 \appendix
 \section*{Appendix V: Emergent $\alpha$}
 
+% --- Zachovany stavajici obsah (placeholder) ---
+% Sem vlozime cely dosavadni text appendix_V_emergent_alpha.tex
+% (ponechano pro integraci)
+
 \subsection*{V.1 Existing content}
 [Existing material preserved here...]
+
+% --- Kratky doplnek ---
+\subsection*{V.2 Cross-reference to electron mass}
+As shown in Appendix~K.3, the electron mass can be interpreted as the first 
+internal eigenmode on $T^2(\tau)$ with Hosotani background. This directly ties 
+the emergent value of $\alpha$ to the lepton mass spectrum, providing a 
+non-circular and unified account of both quantities.
+
 
 \subsection*{V.2 Cross-reference to electron mass}
 As shown in Appendix~K.3, the electron mass can be interpreted as the first 
